--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
@@ -19,6 +20,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^11.2.13",
+    "lucide-react": "^0.454.0",
     "next": "14.2.4",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
